@@ -377,9 +377,9 @@ This function does not work for SECONDS greater than `most-positive-fixnum'."
             spec (match-string 1 string))
       (unless (string-equal spec "%")
         (or (setq match (assoc (downcase spec) units))
-            (error "Bad format specifier: `%s'" spec))
+            (error "Bad format specifier: ‘%s’" spec))
         (if (assoc (downcase spec) usedunits)
-            (error "Multiple instances of specifier: `%s'" spec))
+            (error "Multiple instances of specifier: ‘%s’" spec))
         (if (string-equal (car match) "z")
             (setq zeroflag t)
           (unless larger
